udpated code for portfolio

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,19 +1,1 @@
-<div class="container mt-5">
-    <div class="row">
-        <div class="col-12 text-center mb-4" *ngIf="!registerMode">
-            <h1 class="animated-heading">
-                <span>"Engineering is the Backbone of Tomorrow's Innovations."</span>
-            </h1>
-        </div>
-    </div>
-
-    <div class="row align-items-center fade-in-section">
-        <div class="col-md-6 text-center">
-            <p class="lead animated-text">
-                Hi, I'm <strong>Pankaj Jadhav</strong>, a passionate and dedicated software developer with 8 years of professional experience. 
-                I hold a degree in engineering from Pune University and specialize as a Fullstack developer.
-                My journey in software development has been driven by a deep interest in building robust, scalable, and efficient systems.
-            </p>
-        </div>
-    </div>
-</div>
+<app-nav/>
