--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,20 +1,3 @@
 <app-nav/>
 
-<div class="card bg-base-100 w-1/2 mx-auto p-10 mt-24 shadow-xl">
-    <h3 class="text-3xl text-red-500">
-        {{title()}}
-    </h3>
-    <ul class="list">
-        @for (profile of profiles; track profile.id) {
-
-            <li class="list-row items-center">
-                <img src="/user.png" alt="user avatar" class="size-12 rounded-box">
-                <div>
-                    {{profile.Email}}
-                </div>
-            </li>
-        }
-
-    </ul>
-
-</div>
+<app-home/>
